# Project3

./: CMakeLists.txt  FinalGroupProject3A.cpp  Project3_Morita.cpp  README.md  bucketsort.txt  generator.h  main.cpp  makefile  randomizer.h  sorting.h
src/: generator.h  main.cpp  sorting.h
src/deprecated/: Project3_Morita.cpp  README.md
